# Root BUILD file for Estuary Flow

# This is a placeholder BUILD file for the root of the workspace.
# Individual crates have their own BUILD files under crates/*/BUILD.bazel

exports_files([
    "Cargo.toml",
    "Cargo.lock",
    "ops-catalog/data-plane-template.bundle.json",
    "ops-catalog/reporting-L2-template.bundle.json",
])