"Blaze module for Estuary Flow"

module(
    name = "flow",
    version = "0.6.0",
)

###############################################################################
# Bazel dependencies from Bazel Central Registry (BCR)
###############################################################################

# rules_rust - Bazel rules for building Rust code
# Available versions: https://registry.bazel.build/modules/rules_rust
bazel_dep(name = "rules_rust", version = "0.67.0")

# rules_cc - Bazel rules for C/C++
# Available versions: https://registry.bazel.build/modules/rules_cc
bazel_dep(name = "rules_cc", version = "0.2.12")

# cxx.rs - Safe interop between Rust and C++
# Available versions: https://registry.bazel.build/modules/cxx.rs
bazel_dep(name = "cxx.rs", version = "1.0.186")

# platforms - Platform definitions (needed for conditional compilation)
# Available versions: https://registry.bazel.build/modules/platforms
bazel_dep(name = "platforms", version = "1.0.0")

###############################################################################
# Rust toolchain configuration
###############################################################################

# Register Rust toolchains for the version specified in Cargo.toml (1.90.0)
# Includes MUSL target triple for static linking
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    extra_target_triples = [
        "x86_64-unknown-linux-musl",
        "aarch64-unknown-linux-musl",
        "wasm32-unknown-unknown",
    ],
    # Treat warnings as errors for all Rust code
    # Third-party crates override this with --cap-lints=allow in their individual targets
    extra_rustc_flags = [
        "-Dwarnings",
    ],
    versions = ["1.90.0"],
)
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")
register_toolchains("@rules_rust//rust/private/dummy_cc_toolchain:dummy_cc_wasm32_toolchain")

###############################################################################
# Cargo dependencies (crates from crates.io)
###############################################################################

# crate_universe extension for managing Cargo dependencies
crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")

# Define our workspace with all crates
# This reads the root Cargo.toml (workspace) and Cargo.lock
crate.from_cargo(
    name = "crates_io",
    cargo_lockfile = "//:Cargo.lock",
    # Point to workspace Cargo.toml to handle workspace inheritance properly
    manifests = ["//:Cargo.toml"],
)

# Configure rdkafka-sys to use GNU ld instead of lld for C library build
# librdkafka's version script has an issue with lld (exports undefined test symbol)
# Use BFD linker for this crate's build script only
crate.annotation(
    crate = "rdkafka-sys",
    version = "4.9.0+2.10.0",
    build_script_env = {
        # Override linker to use bfd instead of lld for librdkafka C build
        "LDFLAGS": "-fuse-ld=bfd",
    },
)

# Configure getrandom to enable JS features for WASM targets
# The getrandom crate requires these features to work with wasm32-unknown-unknown
# We also need to manually add wasm-bindgen and js-sys dependencies for wasm32 targets
# because crate_universe doesn't properly handle optional + target-specific + feature-gated deps
crate.annotation(
    crate = "getrandom",
    version = "0.2.16",
    crate_features = ["js"],
    deps = [
        "@crates_io__js-sys-0.3.81//:js_sys",
        "@crates_io__wasm-bindgen-0.2.104//:wasm_bindgen",
    ],
)

# Configure getrandom 0.3.x to enable wasm_js feature for WASM targets
# Version 0.3.x uses "wasm_js" instead of "js" feature flag
crate.annotation(
    crate = "getrandom",
    version = "0.3.4",
    crate_features = ["wasm_js"],
    deps = [
        "@crates_io__js-sys-0.3.81//:js_sys",
        "@crates_io__wasm-bindgen-0.2.104//:wasm_bindgen",
    ],
)

# Configure uuid to enable js feature for WASM targets
# The uuid crate requires a randomness source for wasm32-unknown-unknown
# Using "js" feature which relies on wasm-bindgen + js-sys (already available)
crate.annotation(
    crate = "uuid",
    version = "1.18.1",
    crate_features = ["js"],
    deps = [
        "@crates_io__wasm-bindgen-0.2.104//:wasm_bindgen",
        "@crates_io__js-sys-0.3.81//:js_sys",
    ],
)

# Make the crates_io repository available
use_repo(crate, "crates_io")

###############################################################################
# System libraries from Nix development environment
###############################################################################

# Extension for importing system libraries via pkg-config
system_libs = use_extension("//bazel:system_library_extension.bzl", "system_library")

# liburing - async I/O library used by RocksDB
system_libs.library(
    name = "liburing",
    libname = "uring",
    pkg_config_name = "liburing",
)

# Compression libraries required by RocksDB
system_libs.library(
    name = "zlib",
    libname = "z",
    pkg_config_name = "zlib",
)

system_libs.library(
    name = "snappy",
    libname = "snappy",
    pkg_config_name = "snappy",
)

system_libs.library(
    name = "bzip2",
    libname = "bz2",
    pkg_config_name = "bzip2",
)

system_libs.library(
    name = "lz4",
    libname = "lz4",
    pkg_config_name = "liblz4",
)

system_libs.library(
    name = "zstd",
    libname = "zstd",
    pkg_config_name = "libzstd",
)

# Make system library repositories available
use_repo(
    system_libs,
    "liburing",
    "zlib",
    "snappy",
    "bzip2",
    "lz4",
    "zstd",
)
