[tool.poetry]
name = "estuary-flow"
version = "0.1.0"
description = ""
authors = ["Johnny Graettinger <johnny@estuary.dev>"]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
pytest-insta = "^0.3.0"
fastapi = "^0.111.1"
pydantic = "^2.8.2"
pyjwt = "^2.8.0"
asyncpg = "^0.29.0"
asyncpg-stubs = "^0.29.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"