[package]
name = "estuary_bridge"
version = "0.1.0"
authors = ["Johnny Graettinger <johnny531@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cbindgen = "0.13.2"

[dependencies]
estuary_json = { path = "../json" }
estuary_json_ext = { path = "../json_ext" }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0.14"
uuid = "0.8.1"

[lib]
path = "lib.rs"
crate-type = ["staticlib"]