[package]
name = "gazette-rs"
version = "0.1.0"
authors = ["Johnny Graettinger <johnny531@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.2"
prost = "0.6"
prost-types = "0.6"

[build-dependencies]
tonic-build = "0.2"