[package]
name = "estuary_json"
version = "0.1.0"
authors = ["Johnny Graettinger <johnny531@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1.1"
percent-encoding = "2.1.0"
serde = "1.0"
serde_json = "1.0"
serde-transcode = "1.1.0"
regex = "1.3.1"
fxhash = "0.2.1"
error-chain = "0.12.1"
tinyvec = {version = "0.3.2", features = ["alloc"]}

[dev-dependencies]
glob = "0.3.0"

[lib]
path = "lib.rs"
