[package]
name = "estuary_protocol"
version = "0.1.0"
authors = ["Johnny Graettinger <johnny531@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
tonic = "0.3"
prost = "0.6"
prost-types = "0.6"
humantime-serde = "1.0"

[dev-dependencies]
insta = "^0.16"
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.3"
